--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,4 @@ formats: all
 python:
   version: 3.7
   install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - doc
+    - requirements: docs/requirements.txt
