--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,1 +1,6 @@
-sphinx-rtd-theme>=0.4.3,<1
+fastecdsa>=1.7.4,<2
+eth-utils>=1.8.0,<2
+web3>=4.9.0,<5
+requests>=2.22.0,<3
+py-solc>=3.2.0,<4
+python-bitcointx>=1.0.1,<2
