add code coverage and pylint tool

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,23 @@
 [tox]
-envlist = py{36, 37}-core, docs
+envlist = py{36, 37}-core, doc, lint
 
 [testenv]
-usedevelop = True
+extras = test
 commands =
-    core: pytest {posargs:tests}
-    docs: sphinx-apidoc -f -o {toxinidir}/docs/ {toxinidir}/asimov
+    core: pytest tests
+whitelist_externals = pytest
+
+[testenv:doc]
+commands =
+    doc: sphinx-apidoc -f -o {toxinidir}/docs/ {toxinidir}/asimov
           make -C docs clean
           make -C docs html
-whitelist_externals = pytest
-                      make
+extras = doc
+whitelist_externals = make
                       sphinx-apidoc
+
+
+[testenv:lint]
+extras = lint
+commands = pylint asimov
+whitelist_externals = pylint
